# Robot-Motion-Planning

./: README.md  main.py  models.sql
A_Star_Algorithm/: A_star.py  A_star_optimized.py  GPU_A_star.py  theoretical_resources
A_Star_and_Ant_Colony_algos/: A_star.py
A_star_algorithm/: shapes.py
CPU_GPU_MultiProcessing/: multithreading.py
CPU_GPU_MultiProcessing/Cython/: counter.c  setup.py
CPU_MultiProcessing/: multithreading.py  notes
CPU_Multithreading/: multithreading.py
Code_Performance/: main.cpp
Graph_Algorithms/: A_star_dijkstra.py  A_star_optimized_dijkstra.py  Ant_colony.py  ConstVars.py  DiagonalDistanceUtils.py  DistanceUtils.py  GeometryUtils.py  graph.py  rrt.py  rrt_star.py
OtherIdeas/UnityML/: main.cs  (+1 more)
Other_Ideas/Code_Performance/Pybindings/VisualStudioBuilds/: CMakeLists.txt  Nowy Dokument tekstowy.txt  main.cpp  notes.txt
Other_Ideas/Code_Performance/Pybindings/VisualStudioBuilds/pybind11/docs/: conf.py
Reinforcment_Learning_DQN/: AIagent.py  DQN_tunning.py  GPU_PyTorch_test.py  check_CPU.ps1  check_GPU.ps1  check_RAM.ps1  environment.py  metrics.py  tensorflow.txt  visualize.py
UnityML/: visualisation.py
agent_output/: reward_values_per_episode_file.txt
movement-simulation/: aaa.py  automat.py  automatic.py  automatically.py  manually.py  old.py  old_version.py  paths  sandbox.py  self-driven.py
reinforcment-learning-DQN/: AIagent.py  GPU_check  aaa.py  agent.py  empty-output-folder.ps1  empty-output-folder.sh  empty-saved-weights.sh  environment.py  geometry.py  help.ipynb  scratchpad  scratchpad.py  theoretical-resources
(+551 files in other folders)
